# interval-arithmetic

./: CMakeLists.txt  LICENSE
benchmarks/: core_benchmarks.cpp  set_round.cpp
examples/exponent/: CMakeLists.txt  main.cpp
examples/io/: CMakeLists.txt  main.cpp
examples/sinus/: CMakeLists.txt  main.cpp
include/common_functions/: abs.hpp  common_functions.hpp  sin.hpp  taylor_series.hpp
include/core/: intervals.hpp  round_mode.hpp  round_mode_scope.hpp
src/: main.cpp
src/common_functions/: abs.hpp  common_functions.hpp  sin.hpp  taylor_series.hpp
src/core/: intervals.hpp  round_mode.cpp  round_mode_scope.cpp
